--- a/assets/references.bib
+++ b/assets/references.bib
@@ -63,7 +63,49 @@
 	doi = {10.1111/pops.12078}}
 
 %% Children and socialization
+@article{sapiro_2004,
+	annote = {Q: How can we move the literature of political socialization forward? What are some stereotypes of the literature?
 
+		Argues:
+		- There are three key arguments:
+		  1. There should be a more comparative field of political socialization
+		  2. We should reconsider how relevant childhood politics is
+		  3. What is the importance of understanding the origins of political preferences
+
+		- The field has two approaches:
+		  - A macro-level: where socialization inculcate's appropriate norms and practices in citizens
+		  - Micro level: the patterns and processes by which individuals engage in political development and learning
+		- Many scholars think little about children's political attitudes and engagement, chalking it up to naivte and to copying parents. There is some work that his challenging this argument by showing that some children hold some pretty jaded views as a result of exposure to these views from parents. There is also some work that shows that children are actually encouraged to participate in political deliberation in some cultures. This can help with the learning and socialization process.},
+	author = {Virginia Sapiro},
+	date-added = {2021-10-15 08:04:52 -0600},
+	date-modified = {2021-11-18 09:09:37 -0700},
+	doi = {10.1146/annurev.polisci.7.012003.104840},
+	month = {may},
+	number = {1},
+	pages = {1--23},
+	publisher = {Annual Reviews},
+	title = {Not Your Parents' Socialization: Introduction for a New Generation},
+	volume = {7},
+	year = 2004}
+@incollection{sears_brown_2013,
+	address = {New York},
+	annote = {Q: What does the literature say about where the heterogeneity in social learning on things like prejudice, partisanship, civic engagement come from?
+
+Argues:
+- While traditionally scholars have thought of family transmission being significant for social learning, some argues that it is not as dominant of a role.
+- Early socialiation is often not a sufficient condition for predicting attitudes, you must also examine the role of exogenous events in generating a generational collective memory and examine how those effects interact with prior attitudes to shift views.
+- Racial prejudice tends to develop later than in-group preference. Children tend to prefer playmates that look similar to them and are often neutral to other racial groups. Once they get near the pre-teen years, thats when some negative views start to really take form. Before that, they are either neutral or they root their negative attitudes in physical characteristics but don't really hold stereotypes based on abstract views.
+},
+	author = {David O. Sears and Christia Brown},
+	booktitle = {The Oxford Handbook of Political Psychology},
+	date-added = {2021-10-15 08:04:52 -0600},
+	date-modified = {2021-11-18 09:09:50 -0700},
+	doi = {10.1093/oxfordhb/9780199760107.013.0003},
+	editor = {Huddy, Leonie and Sears, David O. and Levy, Jack S.},
+	month = {sep},
+	publisher = {Oxford University Press},
+	title = {Childhood and Adult Political Development},
+	year = 2013}
 @article{reifen-tagar_cimpian_2022_pp,
 	author = {Reifen-Tagar, Michal and Cimpian, Andrei},
 	year = {2022},
@@ -153,6 +195,11 @@
 	number = {2},
 	pages = {245--266},
 	doi = {10.1111/pops.12040}}
+@article{conroy_green_2020,
+	author = {Conroy, Meredith and Green, Jon},
+	journal = {Political Research Quarterly},
+	title = {{It Takes a Motive: Communal and Agentic Articulated Interest and Candidate Emergence}},
+	year = {2020}}
 @article{wolak_2020_pg,
 	author = {Wolak, Jennifer},
 	year = {2020},
@@ -517,6 +564,14 @@
 	title = {{Whites' opposition to busing: Symbolic racism or realistic group conflict?}},
 	volume = {45},
 	year = {1983}}
+@book{kinder_sanders_1996,
+	address = {Chicago, IL},
+	author = {Kinder, Donald R. and Sanders, Lynn M.},
+	date-added = {2021-09-20 08:36:35 -0600},
+	date-modified = {2021-11-17 13:20:36 -0700},
+	publisher = {The University of Chicago Press},
+	title = {{Divided By Color: Racial Politics and Democratic Ideals}},
+	year = {1996}}
 @book{gilens_1999_ucp,
 	address = {Chicago, IL},
 	author = {Gilens, Martin},
@@ -547,6 +602,16 @@
 	title = {{Partisan reinforcement and the poor: The impact of context on explanations for poverty}},
 	volume = {90},
 	year = {2009}}
+@incollection{huddy_2012,
+	author = {Huddy, Leonie},
+	booktitle = {The Oxford Handbook of Political Psychology},
+	chapter = {Chapter 23},
+	editor = {Huddy, Leonie},
+	mendeley-groups = {Race and Behavior/White Identity},
+	pages = {737--773},
+	publisher = {Oxford University Press},
+	title = {{From Group Identity to Political Cohesion and Commitment}},
+	year = {2012}}
 @article{tesler_2013_jop,
 	author = {Michael Tesler},
 	date-added = {2021-12-08 14:06:58 -0700},
