--- a/assets/references.bib
+++ b/assets/references.bib
@@ -709,3 +709,48 @@ Argues:
     number = {4},
     pages = {1050--1075},
     doi = {10.1094/poq/nfab057}}
+
+%% Item equivalence
+@article{pietryka_macintosh_2022_jop,
+	author = {Matthew T. Pietryka and Randall C. Macintosh},
+	journal = {Journal of Politics},
+	title = {ANES Scales Often Don't Measure What You Think They Measure},
+	year = {2022},
+	volume = 84,
+	number = 2,
+	doi = 10.1086/715251
+	}
+
+%% Software
+@Manual{R,
+    title = {R: A Language and Environment for Statistical Computing},
+    author = {{R Core Team}},
+    organization = {R Foundation for Statistical Computing},
+    address = {Vienna, Austria},
+    year = {2022},
+    url = {https://www.R-project.org/},
+  }
+@Manual{dataTable,
+    author = {Matt Dowle and Arun Srinivasan},
+    year = {2023},
+    note = {R package version 1.14.8},
+    url = {https://CRAN.R-project.org/package=data.table},
+  }
+@Book{ggplot2,
+    author = {Hadley Wickham},
+    title = {ggplot2: Elegant Graphics for Data Analysis},
+    publisher = {Springer-Verlag New York},
+    year = {2016},
+    isbn = {978-3-319-24277-4},
+    url = {https://ggplot2.tidyverse.org},
+  }
+@Article{modelsummary,
+    title = {{modelsummary}: Data and Model Summaries in {R}},
+    author = {Vincent Arel-Bundock},
+    journal = {Journal of Statistical Software},
+    year = {2022},
+    volume = {103},
+    number = {1},
+    pages = {1--23},
+    doi = {10.18637/jss.v103.i01},
+  }
